<package>
  <name>rviz_plugin_camerarenderpublisher</name>
  <version>0.1.0</version>
  <description>
     rviz plugin to republish the images rendered in a camera plugin of rviz as ros images
  </description>
  <maintainer email="roberto.martinmartin@tu-berlin.de">Roberto Martin-Martin</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/none</url>
  <author email="roberto.martinmartin@tu-berlin.de">Roberto Martin-Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
